# nebula-aurora-assignment

./: Dockerfile  README.md  run_cluster.sh
wiki-chart/: Chart.yaml  values.yaml
wiki-chart/templates/: deployment.yaml  grafana-dashboard-configmap.yaml  grafana-datasource-configmap.yaml  grafana-deployment.yaml  grafana-service.yaml  ingress.yaml  postgres-service.yaml  postgres-statefulset.yaml  prometheus-deployment.yaml  prometheus-service.yaml  service.yaml
wiki-service/: Dockerfile  pyproject.toml
wiki-service/app/: README.md  database.py
