[project]
name = "nebula-aurora-assignment"
version = "0.1.0"
description = "nebula-aurora-assignment"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.0",
    "greenlet>=3.2.4",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
